style.css
*{
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}

body{
    background-color: #C3FF93;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.h1{
    margin-top: 30px;
    font-size: 50px;
    text-align: center;
}

.line{
    border: 2px solid lightgray;
}
.txt{
    width: 500px;
    background-color:#CAF4FF;
    padding: 10px;
    height: 50px;
    border: none;
    border-radius: 7px;
    font-size: 20px;
    outline: none;
    /* text-align: center; */
}


.btn{
    height: 50px;
    width: 50px;
    cursor: pointer;
    border-radius: 100%;
    border: none;
    background-color:#FFAA80;
    font-size: 30px;
}

.btn:hover{
    scale: 1.1;
}

.fst-div{
    text-align: center;
    height: 40px;
    display: flex;
    justify-content: center;
    margin-top: 40px;
    gap: 20px;
    margin-left: 40px;
    margin-bottom: 40px;
}

.note{
    padding: 20px;
    padding-top: 15px;
    border: none;
    border-radius: 5px;
    height: 300px;
    width: 300px;
    border-top-right-radius: 50px;
    border-bottom-left-radius: 50px;
    text-wrap: break-word;
}

.notes{
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-gap: 10px; 
    padding: 20px;
    font-family: cursive;
}

.note-p{
    font-size: 20px;
    text-align: center;
    font-weight: semibold;
    margin-top: 15px;
}

